# generalized-additive-models

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml
docs/: API.rst  conf.py  getting_started.rst  index.rst  references.rst
docs/examples/: constraints.py  diagnostic_plots.py  diagnostics_plots.py  ex_salaries.py  getting_started.py  one_dimensional_regression.py
docs/notebooks/: diagnostic_plots.pct.py  index.rst  under_the_hood.pct.py
examples/: README.rst  plot_univariate_spline.py  plot_univariate_spline_with_extrapolation.py  plot_univariate_spline_with_regularization.py  plot_univariate_spline_with_uncertainty.py
examples/distributions/: README.rst  plot_distributions.py
examples/inspection/: README.rst  plot_QQ_gaussian_identity.py  plot_partial_effects_gaussian_identity.py  plot_partial_effects_gaussian_log.py  plot_partial_effects_logistic.py  plot_partial_effects_poisson.py  plot_residuals_gaussian_identity.py
examples/links/: README.rst  plot_links.py
examples/models/: README.rst  plot_model_comparison.py  plot_poisson_regression.py  plot_powerlifters.py  plot_powerlifters_age.py
examples/splines/: README.rst  plot_spline_basis.py  plot_spline_basis_fit_to_data.py  plot_tensorspline.py  plot_univariate_spline.py  plot_univariate_spline_with_regularization.py  plot_univariate_spline_with_uncertainty.py
examples/terms/: README.rst  plot_categorial.py  plot_categorial_tensor.py  plot_linear_term.py  plot_spline_bases_degrees.py  plot_spline_basis.py  plot_spline_basis_constraints.py  plot_spline_basis_fit_to_data.py  plot_tensorspline.py  plot_tensorspline_regularization.py  plot_univariate_spline.py  plot_univariate_spline_with_expectiles.py  plot_univariate_spline_with_extrapolation.py  plot_univariate_spline_with_regularization.py  plot_univariate_spline_with_uncertainty.py
generalized_additive_models/: __init__.py  distributions.py  gam.py  inspection.py  links.py  optimizers.py  penalties.py  splinetransformer.py  terms.py  utils.py
generalized_additive_models/datasets/: __init__.py  bicycles.csv  mcycle.csv  powerlifters.csv  salaries.csv  test.csv
generalized_additive_models/inspection/: __init__.py  inspection.py  partial_effect.py  qq.py  residual_histogram.py  residual_scatter.py
generalized_additive_models/tests/: benchmarking.py  test_against_other_software.py  test_datasets.py  test_distributions.py  test_gam.py  test_links.py  test_optimizers.py  test_terms.py
