[project]
name = "generalized_additive_models"
version = "0.1.0"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "tabulate"
]
description = "Generalized additive models in Python."
readme = {file = "README.rst", content-type = "text/x-rst"}
authors = [
  {name = "tommyod", email = "tommy.odland@gmail.com"},
]
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Repository = "https://github.com/tommyod/generalized-additive-models"

[project.optional-dependencies]
dev = ["pytest",
        "black",
        "flake8",
        "jupyter",
        "matplotlib"
        ]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

