[metadata]
name = generalized_additive_models
version = attr: generalized_additive_models.__version__
author = Tommy Odland
author_email = tommy.odland@gmail.com
description = Generalized additive models in Python.
long_description = file: README.rst
keywords = gam, generalized additive models
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    pandas
    scikit-learn
    tabulate

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.extras_require]
dev = 
    pytest
    black
    flake8
    jupyter
    matplotlib

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*